# fabric-rti-mcp

./: README.md  pyproject.toml
.github/skills/kql/: SKILL.md
.github/skills/kql/references/: advanced-patterns.md  error-recovery.md
fabric_rti_mcp/authentication/: auth_middleware.py
fabric_rti_mcp/config/: __init__.py
fabric_rti_mcp/services/kusto/: kusto_config.py  kusto_service.py  kusto_tools.py  shots_table_ref.py
tests/unit/: test_global_config.py
tests/unit/kusto/: conftest.py  test_kql_escape.py  test_kusto_deeplink.py  test_kusto_service.py  test_shots_table_ref.py
