[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-fabric-rti-mcp"
dynamic = ["version"]
description = "Microsoft Fabric RTI MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "httpx~=0.28.1",
    "fastmcp>=3.0,<4",
    "azure-kusto-data>=6.0.3,<7",
    "azure-identity>=1.24.0,<2",
    "azure-kusto-ingest>=6.0.3,<7",
    "msal>=1.32.0,<2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.14.10",
    "ty",
]
notebook = [
    "numpy",
    "pandas",
    "ipykernel",
    "Kqlmagic",
]

[project.scripts]
microsoft-fabric-rti-mcp = "fabric_rti_mcp.server:main"
microsoft_fabric_rti_mcp = "fabric_rti_mcp.server:main"

[project.urls]
Homepage = "https://github.com/microsoft/fabric-rti-mcp"
Repository = "https://github.com/microsoft/fabric-rti-mcp"
Issues = "https://github.com/microsoft/fabric-rti-mcp/issues"
Documentation = "https://github.com/microsoft/fabric-rti-mcp#readme"

[tool.setuptools]
packages = ["fabric_rti_mcp"]

[tool.setuptools.package-data]
fabric_rti_mcp = ["bin/*"]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "B904", # Within an `except` clause, raise exceptions with `raise
    "B905", # `zip()` without an explicit `strict=` parameter
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "E501", # line too long
    "B024", # `Component` is an abstract base class, but it has no abstract methods or properties
    "UP031", # Use format specifiers instead of percent format
    "SIM105", # Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
]

[tool.setuptools_scm]
write_to = "fabric_rti_mcp/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.14.10",
    "ty",
]
